<resources>
    <string name="app_name">Campus-Knowall</string>
    <string name="hello">欢迎使用校园百事通</string>
    <string name="username_prompt">请输入账号</string>
    <string name="password_prompt">请输入密码</string>
    <string name="password_prompt2">请再次输入密码</string>
    <string name="phone_prompt">请输入手机号码</string>
    <string name="id">账号</string>
    <string name="password">密码</string>
    <string name="phone">手机号</string>
    <string name="login">登 录</string>vds
    <string name="register">注册</string>
    <string name="register_prompt">没有账号？去注册</string>
    <string name="forgot">忘记密码？</string>
    <string name="login_prompt">已有账号？去登录</string>
    <string name="title_forum">论坛</string>
    <string name="title_team">组队</string>
    <string name="title_message">消息</string>
    <string name="title_home">我的</string>
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="register">注册</string>
    <string name="register">注册</string>
    <string name="register">注册</string>-->


</resources>