<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_forum">

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.example.campus_knowall.ForumFragment"
        android:label="@string/title_forum"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/navigation_team"
        android:name="com.example.campus_knowall.TeamFragment"
        android:label="@string/title_team"
        tools:layout="@layout/activity_main_team" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.campus_knowall.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/activity_message" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.campus_knowall.MyFragment"
        android:label="@string/title_home"
        tools:layout="@layout/activity_my" />
</navigation>